src/test/ui/async-await/issue-70594.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-70594.rs:4:11
   |
LL | async fn fun() {
   |          --- this is not `async`
LL |     [1; ().await];
   |           ^^^^^^ only allowed inside `async` functions and blocks

error[E0744]: `.await` is not allowed in a `const`
  --> $DIR/issue-70594.rs:4:9
   |
LL |     [1; ().await];
   |         ^^^^^^^^

error[E0744]: `.await` is not allowed in a `const`
  --> $DIR/issue-70594.rs:4:11
   |
LL |     [1; ().await];
   |           ^^^^^^

error[E0277]: `()` cannot be converted to a future
  --> $DIR/issue-70594.rs:4:11
   |
LL |     [1; ().await];
   |           ^^^^^^ `()` cannot be converted to a future
   |
   = help: the trait `IntoFuture` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited
help: remove the `.await`
   |
LL -     [1; ().await];
LL +     [1; ()];
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0277, E0728, E0744.
For more information about an error, try `rustc --explain E0277`.
